added plugins for maven central
Former-commit-id: 36e94232d7e5f9be4051db6f77e23dab3c9e41f7
Former-commit-id: 1e3bb3f051e451ae6c8d5625bbc3104fa5467c36

--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -11,6 +11,41 @@
 
 	<name>id-authentication</name>
 	<description>Parent project of MOSIP ID Authentication</description>
+	<url>https://github.com/mosip/id-authentication</url>
+	
+	<licenses>
+          <license>
+                <name>MPL 2.0</name>
+                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
+          </license>
+        </licenses>
+	
+	<scm>
+                <connection>scm:git:git://github.com/mosip/id-authentication.git</connection>
+                <developerConnection>scm:git:ssh://github.com:mosip/id-authentication.git</developerConnection>
+                <url>https://github.com/mosip/id-authentication</url>
+                <tag>HEAD</tag>
+        </scm>
+	
+	<developers>
+                <developer>
+                  <name>Mosip</name>
+                  <email>mosip.emailnotifier@gmail.com</email>
+                  <organization>io.mosip</organization>
+                  <organizationUrl>https://github.com/mosip/id-authentication</organizationUrl>
+                </developer>
+        </developers>
+	
+	<distributionManagement>
+                <snapshotRepository>
+                        <id>ossrh</id>
+                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                        <id>ossrh</id>
+                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+        </distributionManagement>
 
 	<modules>
 		<module>authentication-common</module>
@@ -122,6 +157,62 @@
 					<aggregate>true</aggregate>
 				</configuration>
 			</plugin>
+<!--			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+					 	<id>attach-javadocs</id>
+					  	<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+                         		<additionalJOption>-Xdoclint:none</additionalJOption>
+                	  	</configuration>
+                	</plugin>
+-->	
+			<plugin>
+				  <groupId>org.sonatype.plugins</groupId>
+				  <artifactId>nexus-staging-maven-plugin</artifactId>
+				  <version>1.6.7</version>
+				  <extensions>true</extensions>
+				  <configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				  </configuration>
+			</plugin>
+<!--		 	<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-source-plugin</artifactId>
+				  <version>2.2.1</version>
+				  <executions>
+					<execution>
+						<id>attach-sources</id>
+					  	<goals>
+							<goal>jar-no-fork</goal>
+					  	</goals>
+					</execution>
+				  </executions>
+			</plugin>
+-->		
+	                <plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-gpg-plugin</artifactId>
+				  <version>1.5</version>
+				  <executions>
+					<execution>
+						  <id>sign-artifacts</id>
+						  <phase>verify</phase>
+						  <goals>
+							<goal>sign</goal>
+						  </goals>
+					</execution>
+				  </executions>
+        		</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
