--- a/authentication/authentication-kyc-service/pom.xml
+++ b/authentication/authentication-kyc-service/pom.xml
@@ -7,12 +7,15 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7-SNAPSHOT</version>
 	</parent>
+	<version>1.0.7-SNAPSHOT</version>
 	<artifactId>authentication-kyc-service</artifactId>
 	<name>authentication-kyc-service</name>
 	<url>http://maven.apache.org</url>
 	<properties>
+		<authentication-core.verison>1.0.7-SNAPSHOT</authentication-core.verison>
+		<authentication-common.verison>1.0.7-SNAPSHOT</authentication-common.verison>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
@@ -25,12 +28,12 @@
 		<dependency>
 			<groupId>io.mosip.authentication</groupId>
 			<artifactId>authentication-common</artifactId>
-			<version>${ida.version}</version>
+			<version>${authentication-common.verison}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.authentication</groupId>
 			<artifactId>authentication-core</artifactId>
-			<version>${ida.version}</version>
+			<version>${authentication-core.verison}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -46,7 +49,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-cbeffutil-api</artifactId>
-			<version>${project.version}</version>
+			<version>${kernel.version}</version>
 		</dependency>
 	</dependencies>
 	
