--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -6,25 +6,31 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7-SNAPSHOT</version>
 	</parent>
 
+	<version>1.0.7-SNAPSHOT</version>
 	<artifactId>authentication-service</artifactId>
 	<packaging>jar</packaging>
 
 	<name>authentication-service</name>
 	<description>Maven project of MOSIP ID-Authentication Service</description>
 
+	<properties>
+		<authentication-core.verison>1.0.7-SNAPSHOT</authentication-core.verison>
+		<authentication-common.verison>1.0.7-SNAPSHOT</authentication-common.verison>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.authentication</groupId>
 			<artifactId>authentication-core</artifactId>
-			<version>${ida.version}</version>
+			<version>${authentication-core.verison}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.authentication</groupId>
 			<artifactId>authentication-common</artifactId>
-			<version>${ida.version}</version>
+			<version>${authentication-common.verison}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -137,7 +143,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-cbeffutil-api</artifactId>
-			<version>${project.version}</version>
+			<version>${kernel.version}</version>
 		</dependency>
 
 
