MOS-31167 Correction in versioning and props. Code coverage fix.

--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -57,6 +57,10 @@
 	</modules>
 
 	<properties>
+		<ida.version>${project.version}</ida.version>
+		<authentication-core.verison>${ida.version}</authentication-core.verison>
+		<authentication-common.verison>${ida.version}</authentication-common.verison>
+		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
