--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -57,18 +57,32 @@
 	</modules>
 
 	<properties>
-		<ida.version>${project.version}</ida.version>
-		<authentication-core.verison>${ida.version}</authentication-core.verison>
-		<authentication-common.verison>${ida.version}</authentication-common.verison>
+		<authentication.parent.version>${project.version}</authentication.parent.version>
+		<authentication-core.version>${authentication.parent.version}</authentication-core.version>
+		<authentication-common.version>${authentication.parent.version}</authentication-common.version>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
-		<kernel.version>1.0.6</kernel.version>
-		<kernel.core.version>${kernel.version}</kernel.core.version>
-		<kernel.hibernate.version>${kernel.version}</kernel.hibernate.version>
-		<kernel.template.version>${kernel.version}</kernel.template.version>
-		<kernel.pdfgenerate.version>${kernel.version}</kernel.pdfgenerate.version>
+		<kernel.parent.version>1.0.6</kernel.parent.version>
+		<kernel-core.version>1.0.7-SNAPSHOT</kernel-core.version>
+		<kernel-idvalidator-uin.version>${kernel.parent.version}</kernel-idvalidator-uin.version>
+		<kernel-idvalidator-vid.version>${kernel.parent.version}</kernel-idvalidator-vid.version>
+		<kernel-idgenerator-tokenid.version>${kernel.parent.version}</kernel-idgenerator-tokenid.version>
+		<kernel-idobjectvalidator.version>1.0.7-SNAPSHOT</kernel-idobjectvalidator.version>
+		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
+		<kernel-pinvalidator.version>${kernel.parent.version}</kernel-pinvalidator.version>
+		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
+		<kernel-keygenerator-bouncycastle.version>${kernel.parent.version}</kernel-keygenerator-bouncycastle.version>
+		<kernel-crypto-jce.version>${kernel.parent.version}</kernel-crypto-jce.version>
+		<kernel-bioapi-provider.version>${kernel.parent.version}</kernel-bioapi-provider.version>
+		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
+		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
+		<kernel-cbeffutil-api.version>1.1.0-SNAPSHOT</kernel-cbeffutil-api.version>
+		<kernel-auth-adapter.version>${kernel.parent.version}</kernel-auth-adapter.version>
+		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
+		
+		<id-repository-core.version>1.0.7-SNAPSHOT</id-repository-core.version>
 		
 		<json.utility.version>20180130</json.utility.version>
 		
