--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ install: true
 cache:
   directories:
   - $HOME/.m2
-script: cd authentication && mvn install -DskipTests=true -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V 
+script: cd authentication && mvn install -DskipTests=false -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V 
