Added version tag to sub-modules

--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -8,6 +8,7 @@
 		<artifactId>authentication-parent</artifactId>
 		<version>1.0.7-SNAPSHOT</version>
 	</parent>
+	<version>1.0.7-SNAPSHOT</version>
 
 	<artifactId>authentication-service</artifactId>
 	<packaging>jar</packaging>
