--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -9,6 +9,7 @@
 		<artifactId>authentication-parent</artifactId>
 		<version>1.0.7-SNAPSHOT</version>
 	</parent>
+	<version>1.0.7-SNAPSHOT</version>
 	<artifactId>authentication-common</artifactId>
 	<name>authentication-common</name>
 	<url>http://maven.apache.org</url>
