--- a/authentication/authentication-kyc-service/pom.xml
+++ b/authentication/authentication-kyc-service/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.7-SNAPSHOT</version>
+		<version>1.0.6</version>
 	</parent>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>1.0.7</version>
 	<artifactId>authentication-kyc-service</artifactId>
 	<name>authentication-kyc-service</name>
 	<url>http://maven.apache.org</url>
