--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.authentication</groupId>
 	<artifactId>authentication-parent</artifactId>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<packaging>pom</packaging>
 
 	<name>id-authentication</name>
@@ -65,11 +65,11 @@
 
 		<!-- Kernel components -->
 		<kernel.parent.version>1.0.6</kernel.parent.version>
-		<kernel-core.version>1.0.7-SNAPSHOT</kernel-core.version>
+		<kernel-core.version>1.0.7</kernel-core.version>
 		<kernel-idvalidator-uin.version>${kernel.parent.version}</kernel-idvalidator-uin.version>
 		<kernel-idvalidator-vid.version>${kernel.parent.version}</kernel-idvalidator-vid.version>
 		<kernel-idgenerator-tokenid.version>${kernel.parent.version}</kernel-idgenerator-tokenid.version>
-		<kernel-idobjectvalidator.version>1.0.7-SNAPSHOT</kernel-idobjectvalidator.version>
+		<kernel-idobjectvalidator.version>1.0.7</kernel-idobjectvalidator.version>
 		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
 		<kernel-pinvalidator.version>${kernel.parent.version}</kernel-pinvalidator.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
@@ -78,11 +78,11 @@
 		<kernel-bioapi-provider.version>${kernel.parent.version}</kernel-bioapi-provider.version>
 		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
 		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
-		<kernel-cbeffutil-api.version>1.1.0-SNAPSHOT</kernel-cbeffutil-api.version>
+		<kernel-cbeffutil-api.version>1.1.0</kernel-cbeffutil-api.version>
 		<kernel-auth-adapter.version>${kernel.parent.version}</kernel-auth-adapter.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
 		
-		<id-repository-core.version>1.0.7-SNAPSHOT</id-repository-core.version>
+		<id-repository-core.version>1.0.7</id-repository-core.version>
 		
 		<json.utility.version>20180130</json.utility.version>
 		
