--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -45,7 +45,19 @@
                         <id>ossrh</id>
                         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
-        </distributionManagement>
+		</distributionManagement>
+		
+	<repositories>
+		<repository>
+		  <id>ossrh</id>
+		  <name>Central Repository</name>
+		  <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		  <layout>default</layout>
+		  <snapshots>
+			<enabled>true</enabled>
+		  </snapshots>
+		</repository>
+	</repositories> 
 
 	<modules>
 		<module>authentication-common</module>
