--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -9,7 +9,7 @@
 		<artifactId>authentication-parent</artifactId>
 		<version>1.0.6</version>
 	</parent>
-	<version>1.0.7</version>
+	<version>1.0.8-SNAPSHOT</version>
 	<artifactId>authentication-common</artifactId>
 	<name>authentication-common</name>
 	<url>http://maven.apache.org</url>
@@ -166,7 +166,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.0.8-SNAPSHOT</version>
+			<version>${kernel-auth-adapter.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
