--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>authentication-parent</artifactId>
 		<version>1.0.6</version>
 	</parent>
-	<version>1.0.7</version>
+	<version>1.0.8-SNAPSHOT</version>
 
 	<artifactId>authentication-service</artifactId>
 	<packaging>jar</packaging>
