--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>authentication-parent</artifactId>
 		<version>1.0.6</version>
 	</parent>
-	<version>1.0.7</version>
+	<version>1.0.8-SNAPSHOT</version>
 
 	<artifactId>authentication-core</artifactId>
 	<packaging>jar</packaging>
