--- a/authentication/authentication-internal-service/Dockerfile
+++ b/authentication/authentication-internal-service/Dockerfile
@@ -1,5 +1,4 @@
-ARG docker_registry_url=docker-registry.mosip.io:5000
-FROM ${docker_registry_url}/tech5-java8-base:1.0
+FROM openjdk:8
 
 #Uncomment below and Comment above line(i.e. FROM openjdk:8) for OS specific (e.g. Alpine OS ) docker base image
 #FROM openjdk:8-jdk-alpine
@@ -34,10 +33,7 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
-ADD target/authentication-internal-service-*.jar ./opt/Tech5/authentication-internal-service.jar
-
-RUN cd /opt/Tech5
-WORKDIR /opt/Tech5
+ADD target/authentication-internal-service-*.jar authentication-internal-service.jar
 
 EXPOSE 8093
 
@@ -48,9 +44,9 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     rm -rf glowroot.zip ; \
     
     sed -i 's/<service_name>/authentication-internal-service/g' glowroot/glowroot.properties ; \
-    java -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,kernel-cbeffutil-api-0.12.18.jar,kernel-core-0.12.18.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.rmi.port=8190 -Dcom.sun.management.jmxremote.port=8190 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=13.71.81.26 -Dcom.sun.management.jmxremote.local.only=false -jar authentication-internal-service.jar ; \
+    java -jar  -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.rmi.port=8190 -Dcom.sun.management.jmxremote.port=8190 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=13.71.81.26 -Dcom.sun.management.jmxremote.local.only=false authentication-internal-service.jar ; \
     else \
-    java -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,kernel-cbeffutil-api-0.12.18.jar,kernel-core-0.12.18.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.rmi.port=8190 -Dcom.sun.management.jmxremote.port=8190 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=13.71.81.26 -Dcom.sun.management.jmxremote.local.only=false -jar authentication-internal-service.jar ; \
+    java -jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.rmi.port=8190 -Dcom.sun.management.jmxremote.port=8190 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=13.71.81.26 -Dcom.sun.management.jmxremote.local.only=false authentication-internal-service.jar ; \
     fi
 
 
