--- a/authentication/authentication-kyc-service/pom.xml
+++ b/authentication/authentication-kyc-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.8-SNAPSHOT</version>
 	</parent>
 	<version>1.0.8-SNAPSHOT</version>
 	<artifactId>authentication-kyc-service</artifactId>
