--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.8-SNAPSHOT</version>
 	</parent>
 	<version>1.0.8-SNAPSHOT</version>
 
