--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -191,7 +191,7 @@
 					<aggregate>true</aggregate>
 				</configuration>
 			</plugin>
-<!--			<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
@@ -207,7 +207,7 @@
                          		<additionalJOption>-Xdoclint:none</additionalJOption>
                 	  	</configuration>
                 	</plugin>
--->	
+	
 			<plugin>
 				  <groupId>org.sonatype.plugins</groupId>
 				  <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -219,7 +219,7 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				  </configuration>
 			</plugin>
-<!--		 	<plugin>
+		 	<plugin>
 				  <groupId>org.apache.maven.plugins</groupId>
 				  <artifactId>maven-source-plugin</artifactId>
 				  <version>2.2.1</version>
@@ -247,7 +247,7 @@
 					</execution>
 				  </executions>
         		</plugin>
--->
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
