import keys with gpg2

--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -28,8 +28,8 @@ jobs:
         echo "::set-env name=GPG_TTY::$(tty)"
         echo ${{ env.GPG_TTY }}
         sudo apt-get --yes install gnupg2
-        gpg --import ./.github/keys/mosipgpgkey_pub.gpg 
-        gpg --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg 
+        gpg2 --import ./.github/keys/mosipgpgkey_pub.gpg 
+        gpg2 --quiet --batch --passphrase=${{secrets.gpg_secret}}  --allow-secret-key-import --import ./.github/keys/mosipgpgkey_sec.gpg 
      
     - uses: actions/cache@v1
       with:
