--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.mosip.authentication</groupId>
 	<artifactId>authentication-parent</artifactId>
-	<version>1.0.8-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<packaging>pom</packaging>
 
 	<name>id-authentication</name>
@@ -57,14 +57,14 @@
 
 	<properties>
 		<authentication.parent.version>${project.version}</authentication.parent.version>
-		<authentication-core.version>1.0.8-SNAPSHOT</authentication-core.version>
-		<authentication-common.version>1.0.8-SNAPSHOT</authentication-common.version>
+		<authentication-core.version>1.0.6</authentication-core.version>
+		<authentication-common.version>1.0.6</authentication-common.version>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
 		<kernel.parent.version>1.0.6</kernel.parent.version>
 		<kernel-core.version>1.0.8</kernel-core.version>
-		<kernel-tokenidgenerator-service.version>1.0.6</kernel-tokenidgenerator-service.version>
 		<kernel-idvalidator-uin.version>${kernel.parent.version}</kernel-idvalidator-uin.version>
 		<kernel-idvalidator-vid.version>${kernel.parent.version}</kernel-idvalidator-vid.version>
 		<kernel-idgenerator-tokenid.version>${kernel.parent.version}</kernel-idgenerator-tokenid.version>
@@ -74,15 +74,19 @@
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
 		<kernel-keygenerator-bouncycastle.version>${kernel.parent.version}</kernel-keygenerator-bouncycastle.version>
 		<kernel-crypto-jce.version>${kernel.parent.version}</kernel-crypto-jce.version>
-		<kernel-bioapi-provider.version>1.0.7</kernel-bioapi-provider.version>
+		<kernel-bioapi-provider.version>${kernel.parent.version}</kernel-bioapi-provider.version>
 		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
-		<kernel-dataaccess-hibernate.version>1.0.7</kernel-dataaccess-hibernate.version>
+		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
 		<kernel-cbeffutil-api.version>1.1.0</kernel-cbeffutil-api.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
-		<kernel-auth-adapter.version>1.0.8</kernel-auth-adapter.version>
+		<kernel-auth-adapter.version>1.0.8-SNAPSHOT</kernel-auth-adapter.version>
+
 		<id-repository-core.version>1.0.7</id-repository-core.version>
+
 		<json.utility.version>20180130</json.utility.version>
-				<!-- Maven Plugins -->
+
+
+		<!-- Maven Plugins -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.version>3.7.0</maven.compiler.version>
@@ -119,9 +123,6 @@
 
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-		
-		<io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
-
 	</properties>
 
 	<dependencies>
