[MOSIP-772]-tokenIdgenerator service made as library. (#32)
* [MOSIP-772]-tokenIdgenerator service made as library.

* [MOSIP-772] -- pom file edited

Co-authored-by: Nagarjuna <Nagarjuna@Techno-296.technoforte.co.in>

--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -105,6 +105,18 @@
 			<artifactId>kernel-crypto-jce</artifactId>
 			<version>${kernel-crypto-jce.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-tokenidgenerator-service</artifactId>
+			<version>${kernel-tokenidgenerator-service.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.security</groupId>
+					<artifactId>spring-security-config</artifactId>
+				</exclusion>
+			</exclusions>
+			<classifier>lib</classifier>
+		</dependency>
 		<!-- Commons Lang -->
 		<dependency>
 			<groupId>commons-lang</groupId>
