[MOSIP-480] Updated DockerFile

--- a/authentication/authentication-service/Dockerfile
+++ b/authentication/authentication-service/Dockerfile
@@ -36,7 +36,13 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
+ADD configure_start.sh configure_start.sh
+
+RUN chmod +x configure_start.sh
+
 ADD target/authentication-service-*.jar authentication-service.jar
+
+VOLUME /softhsm
 
 #Downloading external dependencies 
 #ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/identy-BioSDK/ABISTech5FaceSDKAdapter_v2.jar ABISTech5FaceSDKAdapter_v2.jar
@@ -49,8 +55,13 @@ ADD target/authentication-service-*.jar authentication-service.jar
 #RUN rm -rf so-files.zip
 
 EXPOSE 8090
+
+EXPOSE 9010
+
 #RUN ls -la
 #RUN ls -la so-files/
+
+ENTRYPOINT [ "/app/configure_start.sh" ]
 
 CMD if [ "$is_glowroot_env" = "present" ]; then \
     wget "${artifactory_url_env}"/artifactory/libs-release-local/io/mosip/testing/glowroot.zip ; \
